--- a/date07.html
+++ b/date07.html
@@ -9,17 +9,18 @@
 <body>
     <section>
         <div class="container">
-            <div class="container1"></div>
-            <div class="container2">
+            <div class="preloader"></div>
+            <div class="imageofeye">
                 <div class="Box">
                         <img src="https://media.istockphoto.com/id/814423752/photo/eye-of-model-with-colorful-art-make-up-close-up.jpg?s=612x612&w=0&k=20&c=l15OdMWjgCKycMMShP8UK94ELVlEGvt7GmB_esHWPYE=" alt="Here image">
                     </div>
                 </div>
-            <div class="container3">
-                <div class="but">
-                    <button>Hover on me</button>
+            <div class="Hoverbutton">
+                <div class="divbtn">
+                    <a href="#" class="btn">Click Me</a>
                 </div>
-            </div>    
+            </div> 
+
         </div>    
         
     </section>
