--- a/date08.html
+++ b/date08.html
@@ -9,18 +9,23 @@
 <body>
     <section>
         <div class="container">
-            <div class="container1">
+            <div class="plantext">
                 <h1 class="text1">
                     Here some text           
                 </h1>
-            </div>   
-            <div class="container2">
-                <h1 class="underline">Hover on me</h1> 
-            </div>
-            <button class="but">Click me </button>
-  
 
-         
+            </div>   
+            <div class="hovertext">
+                <h2 class="underline">Hover on me</h1> \
+
+            </div>
+            <div class="clickbutton">
+                <!-- <button class="but">Click me </button> -->
+                <a href="#" class="btn">Click Me</a>
+
+            </div>
+
+        </div>    
 
     </section>
 </body>
